--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                  <a class="navbar-brand" href="index.html"><h1>
-                    <img src="C:\Users\ASUS\Desktop\Landing Page\Impact\images\Platform logo.png" style="height: 40px;margin-right: 15px;" >THE PLATFORM</h1></a>
+                    <img src="images/Platform logo.png" style="height: 40px;margin-right: 15px;" >THE PLATFORM</h1></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -62,8 +62,8 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="c:\Users\ASUS\Desktop\Landing Page\Impact\Login\login-page-in-html-with-css-code\index.html" target="_blank">Log-in</a></li>
-                            <li><a href="C:\Users\ASUS\Desktop\Landing Page\Impact\Sign up\index.html" target="_blank">Register</a></li>
+                            <li><a href="Login\login-page-in-html-with-css-code\index.html" target="_blank">Log-in</a></li>
+                            <li><a href="Sign up\index.html" target="_blank">Register</a></li>
                             <li class="active"><a href="404.html">404</a></li>
                         </ul>
                     </li>
@@ -953,7 +953,7 @@
 
 			<div id="mapwrapper">
 				<div id="map">
-                    <img src = "C:\Users\ASUS\Desktop\Landing Page\Impact\images\Platform logo.png" style="height: 330px; display:block;margin:auto; margin-top:5px;padding-top: 10px;">
+                    <img src = "images/Platform logo.png" style="height: 330px; display:block;margin:auto; margin-top:5px;padding-top: 10px;">
                 <h1 style="color: white; text-align:center;font-weight:bold">THE PLATFORM</h1>
                 </div>
 			</div>
