--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html"><h1><img src="C:\Users\ASUS\Desktop\Landing Page\Impact\images\Platform logo.png" style="height: 40px;margin-right: 15px;">THE PLATFORM</h1></a>
+                <a class="navbar-brand" href="index.html"><h1><img src="images/Platform logo.png" style="height: 40px;margin-right: 15px;">THE PLATFORM</h1></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -81,8 +81,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="project-item.html">Log-in</a></li>
-                            <li><a href="blog-item.html">Register</a></li>
-                            <li class="active"><a href="404.html">404</a></li>
+                            <li><a href="Sign up/index.html">Register</a></li>
                         </ul>
                     </li>
                     <li><span class="search-trigger"><i class="fa fa-search"></i></span></li>
