--- a/portfolio.html
+++ b/portfolio.html
@@ -80,8 +80,8 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="project-item.html">Log-in</a></li>
-                            <li><a href="Sign up/index.html">Register</a></li>
+                            <li><a href="Login\index.html">Log-in</a></li>
+                            <li><a href="Sign up\index.html">Register</a></li>
                         </ul>
                     </li>
                     <li><span class="search-trigger"><i class="fa fa-search"></i></span></li>
