--- a/services.html
+++ b/services.html
@@ -80,8 +80,8 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us<i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="Login\index.html">Log-in</a></li>
-                            <li><a href="Sign up\index.html">Register</a></li>
+                            <li><a href="Login\index.html" target="_blank">Log-in</a></li>
+                            <li><a href="Sign up\index.html" target="_blank">Register</a></li>
                         </ul>
                     </li>
                     <li><span class="search-trigger"><i class="fa fa-search"></i></span></li>
@@ -100,7 +100,7 @@
                                 <div class="center gap fade-down section-heading">
                                     <h2 class="main-title">Our Services</h2>
                                     <hr>
-                                    <p><b>OUR ORGANTIZATION WORKS ACTIVELY TOWARDS A VARIOUS TOPICS TO BRING A CHANGE.</b></p>
+                                    <p><b>OUR ORGANIZATION WORKS ACTIVELY TOWARDS VARIOUS TOPICS TO BRING A CHANGE.</b></p>
                                 </div>
                             </div>
                         </div>
