--- a/blog.html
+++ b/blog.html
@@ -80,9 +80,8 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="project-item.html">Log-in</a></li>
-                            <li><a href="blog-item.html">Register</a></li>
-                            <li class="active"><a href="404.html">404</a></li>
+                            <li><a href="Log in\index.html" target="_blank">Log-in</a></li>
+                            <li><a href="Sign up\index.html" target="blank">Register</a></li>
                         </ul>
                     </li>
                     <li><span class="search-trigger"><i class="fa fa-search"></i></span></li>
