--- a/contact-us.html
+++ b/contact-us.html
@@ -66,9 +66,8 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="project-item.html">Log-in</a></li>
-                            <li><a href="blog-item.html">Register</a></li>
-                            <li class="active"><a href="404.html">404</a></li>
+                            <li><a href="Login\index.html">Log-in</a></li>
+                            <li><a href="Sign up\index.html">Register</a></li>
                         </ul>
                     </li>
                     <li><span class="search-trigger"><i class="fa fa-search"></i></span></li>
@@ -100,7 +99,7 @@
     <div id="content-wrapper">
         <div id="mapwrapper">
             <div id="map">
-                <img src = "C:\Users\ASUS\Desktop\Landing Page\Impact\images\Platform logo.png" style="height: 330px; display:block;margin:auto; margin-top:5px;padding-top: 10px;">
+                <img src = "images/Platform logo.png" style="height: 330px; display:block;margin:auto; margin-top:5px;padding-top: 10px;">
                 <h1 style="color: white; text-align:center;font-weight:bold">THE PLATFORM</h1>
             </div>
         </div>
