--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="Login\index.html" target="_blank">Log-in</a></li>
+                            <li><a href="Login\login-page-in-html-with-css-code\index.html" target="_blank">Log-in</a></li>
                             <li><a href="Sign up\index.html" target="_blank">Register</a></li>
                         </ul>
                     </li>
