--- a/blog.html
+++ b/blog.html
@@ -187,7 +187,7 @@
                                     <p>Eco-entrepreneurship aims to minimize ecological footprints, promote responsible resource consumption, and contribute to a healthier planet. It represents a forward-thinking approach to business that prioritizes sustainability and environmental consciousness.
 </p>
                                     <div class="read-more-wrapper">
-                                        <a class="btn btn-outlined btn-primary" href="https://economictimes.indiatimes.com/small-biz/entrepreneurship/meet-the-eco-entrepreneurs-trying-to-make-the-earth-a-cleaner-place/all-eyes-on-the-environment/slideshow/80267016.cms">Read More</a>
+                                        <a class="btn btn-outlined btn-primary" href="https://economictimes.indiatimes.com/small-biz/entrepreneurship/meet-the-eco-entrepreneurs-trying-to-make-the-earth-a-cleaner-place/all-eyes-on-the-environment/slideshow/80267016.cms" target="_blank">Read More</a>
                                     </div>
                                 </div>
                             </div><!--/.blog-item-->
