--- a/about-us.html
+++ b/about-us.html
@@ -269,7 +269,7 @@
                     <div class="col-md-3 col-sm-6">
                         <h4>Come See Us</h4>
                         <address>
-                            <strong>Ace Towers</strong><br>
+                            <strong>TBI</strong><br>
                             New York Ave,<br>
                             New York, 215648<br>
                             <abbr title="Phone"><i class="fa fa-phone"></i></abbr> 546 840654 05
