--- a/about-us.html
+++ b/about-us.html
@@ -106,7 +106,7 @@
                                 <div class="center gap fade-down section-heading">
                                     <h2 class="main-title">About Us</h2>
                                     <hr>
-                                    <p><b>SMART GREEN SOLUTIONS: LEVERAGING TECHNOLOGY FOR ECO-INNOVATION</b></p>
+                                    <p><b>SMART GREEN SOLUTIONS : LEVERAGING TECHNOLOGY FOR ECO-INNOVATION</b></p>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,9 @@
                 <div class="gap"></div>
                 <div class="row">
                     <div class="col-md-12 fade-up">
-                        <p>PLATFORM believes in the power of innovation and business to drive positive change without compromising the health of our planet. PLATFORM is a game-changer in the pursuit of sustainability and environmental preservation. At the core of our mission lies the belief that technology and innovation can create a positive impact on our planet. Our platform is a dynamic ecosystem that brings together brilliant minds, businesses, and communities dedicated to shaping a greener future. Our eco-innovative platform stands as a beacon of hope, demonstrating that together, we can overcome environmental challenges. We are passionate about fostering entrepreneurship that goes hand in hand with environmental preservation. Through cutting-edge technologies and collaborative networks, we empower individuals and organizations to discover, share, and implement eco-friendly solutions. Through collaboration with forward-thinking businesses, eco-conscious individuals, and environmental experts, our platform fosters an ecosystem of innovation. Our mission is to create a community of environmentally-conscious entrepreneurs committed to making a difference through sustainable practices and eco-friendly solutions. By providing a safe and supportive space for like-minded individuals, we aim to inspire and nurture green ventures that prioritise environmental impact alongside economic success. Join us in our journey of creating a harmonious balance between entrepreneurship and environmental stewardship. Together, we can turn challenges into opportunities and inspire a new wave of eco-conscious innovations. With our eco-innovative platform, the possibilities are boundless. From entrepreneurs and researchers to policymakers and educators, we invite all change-makers to contribute their ideas and expertise. Let's unite under a common vision, fueled by the desire to create a harmonious coexistence between humanity and nature. Say with us - " Entrepreneurship for greener tomorrow" to build a brighter and more eco-friendly world for generations to come.</p>
+                        <p> THE PLATFORM believes in the power of innovation and business to drive positive change without compromising the health of our planet. THE PLATFORM is a game-changer in the pursuit of sustainability and environmental preservation. Through cutting-edge technologies and collaborative networks, we empower individuals and organizations to discover, share, and implement eco-friendly solutions. Through collaboration with forward-thinking businesses, eco-conscious individuals, and environmental experts, our platform fosters an ecosystem of innovation. Our mission is to create a community of environmentally-conscious entrepreneurs committed to making a difference through sustainable practices and eco-friendly solutions. By providing a safe and supportive space for like-minded individuals, we aim to inspire and nurture green ventures that prioritise environmental impact alongside economic success. Join us in our journey of creating a harmonious balance between entrepreneurship and environmental stewardship. Together, we can turn challenges into opportunities and inspire a new wave of eco-conscious innovations. With our eco-innovative platform, the possibilities are boundless. From entrepreneurs and researchers to policymakers and educators, we invite all change-makers to contribute their ideas and expertise. Let's unite under a common vision, fueled by the desire to create a harmonious coexistence between humanity and nature. 
+                            Say with us -<b>             
+                           "Entrepreneurship for greener tomorrow" </b> to build a brighter and more eco-friendly world for generations to come.</p>
                     </div>
                     <div class="col-md-4 fade-up">
 
@@ -168,7 +170,7 @@
                 <div class="center gap fade-down section-heading">
                     <h2 class="main-title">Meet The Team</h2>
                     <hr>
-                    <p>TOGETHER, WE'RE NOT JUST A TEAM; WE'RE A FORCE TO BE RECKONED WITH. BRACE YOURSELVES FOR REMARKABLE ACHIEVEMENTS!</p>
+                    <p>TOGETHER, WE'RE NOT JUST A TEAM ; WE'RE A FORCE TO BE RECKONED WITH . BRACE YOURSELVES FOR REMARKABLE ACHIEVEMENTS!</p>
                 </div>
                 <div class="gap"></div>
 
@@ -270,9 +272,9 @@
                         <h4>Come See Us</h4>
                         <address>
                             <strong>TBI</strong><br>
-                            New York Ave,<br>
-                            New York, 215648<br>
-                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> 546 840654 05
+                            Gla University,<br>
+                            Mathura, 284106<br>
+                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> +91 8791510130
                         </address>
                     </div> <!--/.col-md-3-->
                 </div>
