--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="center gap fade-down section-heading">
                             <h2 class="main-title">Stuff We Do</h2>
                             <hr>
-                            <p style="letter-spacing: 2px;">Our Organtization works actively towards a various topics to bring a change.</p>
+                            <p style="letter-spacing: 2px;">Our Organisation works actively towards various topics to bring change.</p>
                         </div>
                     </div>
                 </div>
@@ -116,8 +116,8 @@
                             </div>
                             <div class="media-body fade-up">
                                 <h3 class="media-heading">Entrepreneurial Education</h3>
-                                <p>PLATFORM provides a specialized form of learning that equips individuals with the skills, knowledge and mindset needed to navigate the world of entrepreneurship successfully. 
-                                    By instilling an entrepreneurial mindset, we empower individuals to turn their ideas into action, contributing to economic growth and driving positive change in society.
+                                <p> THE PLATFORM provides a specialized form of learning that equips individuals with the skills, knowledge and mindset needed to navigate the world of entrepreneurship successfully. 
+                                    By instilling an entrepreneurial mindset, we empower individuals to turn their ideas into action.
                                     </p>
                             </div>
                         </div>
@@ -129,9 +129,9 @@
                             </div>
                             <div class="media-body fade-up">
                                 <h3 class="media-heading"> Natural Environment</h3>
-                                <p>PLATFORM ensures the safety of the environment and paramount concern for the well-being of both present and future generations.
-                                    By prioritizing environmental protection, we create a healthier and more resilient planet, fostering a harmonious coexistence between humanity and nature for benefiting the life of all on Earth.
-                                   </p>
+                                <p> THE PLATFORM ensures the safety of the environment and paramount concern for the well-being of both present and future generations.
+                                    By prioritizing environmental protection, we create a healthier and more resilient planet, fostering a harmonious coexistence between humanity and nature.
+                                </p>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -142,10 +142,8 @@
                             </div>
                             <div class="media-body fade-up">
                                 <h3 class="media-heading">Provocative Matters/ Taboo Topics.</h3>
-                                <p>Taboo subjects can vary significantly across cultures and societies and may include discussions related to religion, politics, mental health and certain cultural practices.
-                                    The avoidance of these topics is driven by the desire to maintain social harmony and respect others' beliefs and values.
-                                     PLATFORM ensure to foster understanding, empathy, and constructive discussions that can contribute to breaking down barriers and promoting cultural awareness
-                                    </p>
+                                <p> THE PLATFORM ensures to foster understanding, empathy, and constructive discussions that can contribute to breaking down barriers and promoting cultural awareness. The avoidance of these topics is driven by the desire to maintain social harmony and respect others' beliefs and values.
+			        </p>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -159,7 +157,7 @@
                             </div>
                             <div class="media-body fade-up">
                                 <h3 class="media-heading">Advancement and Technology</h3>
-                                <p>PLATFORM continuously tries to push the boundaries of what is possible in our modern world. Technology has also enabled greater connectivity and collaboration, fostering a global community of entrepreneurs and innovators who can share ideas and expertise effortlessly.</p>
+                                <p> THE PLATFORM continuously tries to push the boundaries of what is possible in our modern world. Technology has also enabled greater connectivity and collaboration, fostering a global community of entrepreneurs and innovators who can share ideas and expertise effortlessly.</p>
                             </div>
                         </div>
                     </div><!--/.col-md-4-->
@@ -170,7 +168,7 @@
                             </div>
                             <div class="media-body fade-up">
                                 <h3 class="media-heading"> Innovation Fostering</h3>
-                                <p>Innovation fostering lies at the core of our PLATFORM's mission.
+                                <p>Innovation fostering lies at the core of THE PLATFORM's mission.
                                     By providing a supportive environment that encourages risk-taking and learning from failures, we aim to unleash the full potential of innovation
                                     </p>
                             </div>
@@ -184,7 +182,7 @@
                             <div class="media-body fade-up">
                                 <h3 class="media-heading">Entrepreneurial Networking </h3>
                                 <p>As they say - "Two and two makes Four"
-                                    PLATFORM provides a powerful and essential aspect of the business world, where entrepreneurs come together to build connections and forge relationships that can lead to valuable opportunities and collaborations.
+                                    THE PLATFORM provides a powerful and essential aspect of the business world, where entrepreneurs come together to build connections and forge relationships that can lead to valuable opportunities and collaborations.
                                    </p>
                             </div>
                         </div>
@@ -198,7 +196,7 @@
                         <div class="center gap fade-down section-heading">
                             <h2 class="main-title">Our Skills</h2>
                             <hr>
-                            <p>PLATFORM continuously seeks growth opportunities.
+                            <p>THE PLATFORM continuously seeks growth opportunities.
                             </p>
                         </div>
                     </div>
@@ -312,15 +310,14 @@
 	                    <div class="center gap fade-down section-heading">
 	                        <h2 class="main-title">A Little About Us</h2>
 	                        <hr>
-	                        <p>Smart Green Solutions: Leveraging Technology for Eco-Innovation</p>
+	                        <p>Smart Green Solutions : Leveraging Technology for Eco-Innovation</p>
 	                    </div>
 	                </div>
 	            </div>
 	            <div class="row">
 	                <div class="col-md-10 col-md-offset-1 fade-up">
-	                    <p>PLATFORM believes in the power of innovation and business to drive positive change without compromising the health of our planet.
-                            PLATFORM is a game-changer in the pursuit of sustainability and environmental preservation. At the core of our mission lies the belief that technology and innovation can create a positive impact on our planet. Our platform is a dynamic ecosystem that brings together brilliant minds, businesses, and communities dedicated to shaping a greener future. Our eco-innovative platform stands as a beacon of hope, demonstrating that together, we can overcome environmental challenges.
-                           We are passionate about fostering entrepreneurship that goes hand in hand with environmental preservation.
+	                    <p>THE PLATFORM believes in the power of innovation and business to drive positive change without compromising the health of our planet.
+                            THE PLATFORM is a game-changer in the pursuit of sustainability and environmental preservation. 
                            Through cutting-edge technologies and collaborative networks, we empower individuals and organizations to discover, share, and implement eco-friendly solutions.
                            Through collaboration with forward-thinking businesses, eco-conscious individuals, and environmental experts, our platform fosters an ecosystem of innovation. 
                             Our mission is to create a community of environmentally-conscious entrepreneurs committed to making a difference through sustainable practices and eco-friendly solutions. By providing a safe and supportive space for like-minded individuals, we aim to inspire and nurture green ventures that prioritise environmental impact alongside economic success. Join us in our journey of creating a harmonious balance between entrepreneurship and environmental stewardship.
@@ -374,7 +371,7 @@
 	            <div class="center gap fade-down section-heading">
 	                <h2 class="main-title">Meet The Team</h2>
 	                <hr>
-	                <p>Together, we're not just a team; we're a force to be reckoned with. Brace yourselves for remarkable achievements!
+	                <p>Together, we're not just a team ; we're a force to be reckoned with. Brace yourselves for remarkable achievements!
                     </p>
 	            </div>
 	            <div class="gap"></div>
@@ -595,7 +592,7 @@
                     	<div class="center gap fade-down section-heading">
                             <h2 class="main-title">What They Have Been Saying</h2>
                             <hr>
-                            <p>"A Glimpse into the Future: Exploring the Wonders of PLATFORM"
+                            <p>"A Glimpse into the Future: Exploring the Wonders of THE PLATFORM"
                             </p>
                             <div class="gap"></div>
                         </div>
@@ -645,7 +642,7 @@
 	                                                <img class="img-responsive" src="images/team/abhisekh.jpg" style="width: 220px;height:170px;">
 	                                            </div>
 	                                            <div class="col-sm-9">
-	                                                <p>THE PLATFORM is one of the most engaging platform i have ever used. This will surely inspire people.</p>
+	                                                <p>THE PLATFORM is one of the most engaging platform, I have ever used. This will surely inspire people.</p>
 	                                                <small>Abhishek Gautam</small>
 	                                            </div>
 	                                        </div>
@@ -665,7 +662,7 @@
                    		<div class="gap"></div>
                         <h2 class="main-title">From The Blog</h2>
                         <hr>
-                        <p>"From Waste to Wealth: How Eco-Innovation is Changing the Game"
+                        <p>"From Waste to Wealth : How Eco-Innovation is Changing the Game"
                         </p>
                     </div>
                     <div class="gap"></div>
