--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             </div>
                             <div class="media-body fade-up">
                                 <h3 class="media-heading">Entrepreneurial Networking </h3>
-                                <p>As they say - "Two and two makes Four"
+                                <p>As they say - "Two and two makes Four".
                                     THE PLATFORM provides a powerful and essential aspect of the business world, where entrepreneurs come together to build connections and forge relationships that can lead to valuable opportunities and collaborations.
                                    </p>
                             </div>
