--- a/services.html
+++ b/services.html
@@ -317,10 +317,10 @@
                     <div class="col-md-3 col-sm-6">
                         <h4>Come See Us</h4>
                         <address>
-                            <strong>Ace Towers</strong><br>
-                            New York Ave,<br>
-                            New York, 215648<br>
-                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> 546 840654 05
+                            <strong>TBI,</strong><br>
+                            Gla University,<br>
+                            Mathura, 284106<br>
+                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> +91 8791510130
                         </address>
                     </div> <!--/.col-md-3-->
                 </div>
