--- a/services.html
+++ b/services.html
@@ -318,7 +318,7 @@
                         <h4>Come See Us</h4>
                         <address>
                             <strong>TBI,</strong><br>
-                            Gla University,<br>
+                            GLA University,<br>
                             Mathura, 284106<br>
                             <abbr title="Phone"><i class="fa fa-phone"></i></abbr> +91 8791510130
                         </address>
