--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
                                 <div class="center gap fade-down section-heading">
                                     <h2 class="main-title">Our Works</h2>
                                     <hr>
-                                    <p><b> Success Stories: Delve into Our Outstanding Work.</b></p>
+                                    <p><b> Success Stories : Delve into Our Outstanding Work.</b></p>
                                 </div>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6 about-us-widget">
                         <h4>Global Coverage</h4>
-                        <p>Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin.</p>
+                        <p>Connecting the World , Global Coverage at Your Fingertips.</p>
                     </div><!--/.col-md-3-->
 
                     <div class="col-md-3 col-sm-6">
@@ -228,7 +228,7 @@
                             <ul class="arrow">
                                 <li><a href="#">Company Overview</a></li>
                                 <li><a href="#">Meet The Team</a></li>
-                                <li><a href="#">Our Awesome Partners</a></li>
+                                <li><a href="#">Testimonials</a></li>
                                 <li><a href="#">Our Services</a></li>
                             </ul>
                         </div>
@@ -261,10 +261,10 @@
                     <div class="col-md-3 col-sm-6">
                         <h4>Come See Us</h4>
                         <address>
-                            <strong>Ace Towers</strong><br>
-                            New York Ave,<br>
-                            New York, 215648<br>
-                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> 546 840654 05
+                            <strong>TBI,</strong><br>
+                            GLA University,<br>
+                            Mathura, 284106<br>
+                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> +91 8791510130
                         </address>
                     </div> <!--/.col-md-3-->
                 </div>
