--- a/blog.html
+++ b/blog.html
@@ -156,13 +156,13 @@
                             <ul class="tag-cloud">
                                 <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Entrepreneurship</a></li>
                                 <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Innovation</a></li>
-                                <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Go, Green</a></li>
+                                <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Go Green</a></li>
                                 <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Clean Tech</a></li>
                                 <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Eco-Innovation</a></li>
                                 <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Innovative Ideas</a></li>
                                 <li><a class="btn btn-xs btn-primary btn-outlined" href="#">breaking barriers</a></li>
                                 <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Taboo Aware Community</a></li>
-                                <li><a class="btn btn-xs btn-primary btn-outlined" href="#">WomenInSTEM</a></li>
+                                <li><a class="btn btn-xs btn-primary btn-outlined" href="#">Women-In-STEM</a></li>
                             </ul>
                         </div><!--/.tags-->
 
@@ -277,7 +277,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6 about-us-widget">
                         <h4>Global Coverage</h4>
-                        <p>Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin.</p>
+                        <p>Connecting the World , Global Coverage at Your Fingertips.</p>
                     </div><!--/.col-md-3-->
 
                     <div class="col-md-3 col-sm-6">
@@ -286,7 +286,7 @@
                             <ul class="arrow">
                                 <li><a href="#">Company Overview</a></li>
                                 <li><a href="#">Meet The Team</a></li>
-                                <li><a href="#">Our Awesome Partners</a></li>
+                                <li><a href="#">Testimonials</a></li>
                                 <li><a href="#">Our Services</a></li>
                             </ul>
                         </div>
@@ -319,10 +319,10 @@
                     <div class="col-md-3 col-sm-6">
                         <h4>Come See Us</h4>
                         <address>
-                            <strong>Ace Towers</strong><br>
-                            New York Ave,<br>
-                            New York, 215648<br>
-                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> 546 840654 05
+                           <strong>TBI,</strong><br>
+                            GLA University,<br>
+                            Mathura, 284106<br>
+                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> +91 8791510130
                         </address>
                     </div> <!--/.col-md-3-->
                 </div>
@@ -333,7 +333,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8">
-                        &copy; 2019 Your Site Name. All Rights Reserved. <a href="https://templatemag.com/bootstrap-templates/">Bootstrap templates</a> by TemplateMag.
+                        &copy;  2023 THE PLATFORM. All Rights Reserved. <a href="https://templatemag.com/bootstrap-templates/">
                     </div>
                     <div class="col-sm-4">
                         <ul class="pull-right">
