--- a/contact-us.html
+++ b/contact-us.html
@@ -109,12 +109,12 @@
                 <div class="row">
                     <div class="col-md-4 fade-up">
                         <h3>Contact Information</h3>
-                        <p><span class="icon icon-home"></span>Time Square, New York<br/>
-                            <span class="icon icon-phone"></span>+36 65984 405<br/>
-                            <span class="icon icon-mobile"></span>+36 65984 405<br/>
-                            <span class="icon icon-envelop"></span> <a href="#">email@infinityteam.com</a> <br/>
-                            <span class="icon icon-twitter"></span> <a href="#">@infinityteam.com</a> <br/>
-                            <span class="icon icon-facebook"></span> <a href="#">Infinity Agency</a> <br/>
+                       </p> <span class="icon icon-home"></span>TBI, GLA UNIVERSITY, MATHURA<br/>
+                            <span class="icon icon-phone"></span>+91-8791510130<br/>
+                            <span class="icon icon-mobile"></span>+91-9598129922<br/>
+                            <span class="icon icon-envelop"></span> <a href="#">THE_PLATFORM@gmail.com</a> <br/>
+                            <span class="icon icon-twitter"></span> <a href="#">@THE_PLATFORM.com</a> <br/>
+                            <span class="icon icon-instagram"></span> <a href="#">THE_PLATFORM</a> <br/>
                         </p>
                     </div><!-- col -->
 
@@ -143,7 +143,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6 about-us-widget">
                         <h4>Global Coverage</h4>
-                        <p>Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin.</p>
+                        <p> Connecting the World , Global Coverage at Your Fingertips.</p>
                     </div><!--/.col-md-3-->
 
                     <div class="col-md-3 col-sm-6">
@@ -152,7 +152,7 @@
                             <ul class="arrow">
                                 <li><a href="#">Company Overview</a></li>
                                 <li><a href="#">Meet The Team</a></li>
-                                <li><a href="#">Our Awesome Partners</a></li>
+                                <li><a href="#">Testimonials</a></li>
                                 <li><a href="#">Our Services</a></li>
                             </ul>
                         </div>
@@ -185,10 +185,10 @@
                     <div class="col-md-3 col-sm-6">
                         <h4>Come See Us</h4>
                         <address>
-                            <strong>Ace Towers</strong><br>
-                            New York Ave,<br>
-                            New York, 215648<br>
-                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> 546 840654 05
+                              <strong>TBI,</strong><br>
+                            GLA University,<br>
+                            Mathura, 284106<br>
+                            <abbr title="Phone"><i class="fa fa-phone"></i></abbr> +91 8791510130
                         </address>
                     </div> <!--/.col-md-3-->
                 </div>
@@ -199,7 +199,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8">
-                        &copy; 2019 Your Site Name. All Rights Reserved. <a href="https://templatemag.com/bootstrap-templates/">Bootstrap templates</a> by TemplateMag.
+                        &copy; 2023 THE PLATFORM. All Rights Reserved. <a href="https://templatemag.com/bootstrap-templates/">
                     </div>
                     <div class="col-sm-4">
                         <ul class="pull-right">
