--- a/contact-us.html
+++ b/contact-us.html
@@ -53,7 +53,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html"><h1><img src="C:\Users\ASUS\Desktop\Landing Page\Impact\images\Platform logo.png" style="height: 40px;margin-right: 15px;">THE PLATFORM</h1></a>
+                <a class="navbar-brand" href="index.html"><h1><img src="images/Platform logo.png" style="height: 40px;margin-right: 15px;">THE PLATFORM</h1></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
