--- a/contact-us.html
+++ b/contact-us.html
@@ -66,8 +66,8 @@
                     <li class="dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Join Us <i class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="Login\index.html">Log-in</a></li>
-                            <li><a href="Sign up\index.html">Register</a></li>
+                            <li><a href="Login\login-page-in-html-with-css-code\index.html" target="_blank">Log-in</a></li>
+                            <li><a href="Sign up\index.html" target="_blank">Register</a></li>
                         </ul>
                     </li>
                     <li><span class="search-trigger"><i class="fa fa-search"></i></span></li>
