--- a/Login/login-page-in-html-with-css-code/index.html
+++ b/Login/login-page-in-html-with-css-code/index.html
@@ -31,7 +31,7 @@
 	
 		<div class="right">
 		<h5>Login</h5>
-		<p>Don't have an account? <a href="C:\Users\ASUS\Desktop\Landing Page\Impact\Sign up\index.html" target="_blank">Create Your Account</a> it takes less than a minute</p>
+		<p>Don't have an account? <a href="Sign up\index.html" target="_blank">Create Your Account</a> it takes less than a minute</p>
 		<div class="inputs">
 			<input type="text" placeholder="Username">
 			<br>
