--- a/Sign up/index.html
+++ b/Sign up/index.html
@@ -18,6 +18,14 @@
     <video autoplay  width="240" height="240"
       <source src="Images/platform.mp4" type="video/mp4">
       </video>
+    <img src="images/Quotes_new.png" width="100%" style="
+    margin-bottom: 0;
+    margin-top: 0;
+    padding: 0;
+    height: 144px;
+    width: 300px;
+    border: 0;
+">
     <div class='form'>
       <img src="">
     </div>
