--- a/Sign up/index.html
+++ b/Sign up/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class='photo'>
           <button id='upload'>
-            <i class='fas fa-camera-retro'></i>
+            <i class='fa fa-camera-retro'></i>
           </button>
           <label for='upload'>Upload a photo</label>
         </div>
