--- a/Sign up/index.html
+++ b/Sign up/index.html
@@ -18,7 +18,7 @@
     <video autoplay  width="240" height="240"
       <source src="Images/platform.mp4" type="video/mp4">
       </video>
-    <img src="images/Quotes_new.png" width="100%" style="
+    <img src="Images/Quotes_new.png" width="100%" style="
     margin-bottom: 0;
     margin-top: 0;
     padding: 0;
