--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             </div>
 	                        <div class="team-content fade-up">
 	                            <h5>Divyansh Sharma<small class="role muted">Founder & CEO</small></h5>
-	                            <p>Everyone starts somewher, Lets make it happen.</p>
+	                            <p>Everyone starts somewhere, Lets make it happen.</p>
 	                            <a class="btn btn-social btn-facebook" href="#"><i class="fa fa-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="fa fa-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="www.linkedin.com/in/divyanshsharma99"><i class="fa fa-linkedin"></i></a>
 	                        </div>
 	                    </div>
