--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                             </div>
 	                        <div class="team-content fade-up">
 	                            <h5>Tanisha Agarwal<small class="role muted">Content Head</small></h5>
-	                            <p>It won't happen in a day, but will surerly happen one day.</p>
+	                            <p>It won't happen in a day, but will certainly happen one day.</p>
 	                            <a class="btn btn-social btn-facebook" href="#"><i class="fa fa-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="fa fa-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="fa fa-linkedin"></i></a>
 	                        </div>
 	                    </div>
@@ -411,14 +411,14 @@
 	                <div class="col-md-3 col-xs-6">
 	                    <div class="center team-member">
                             <div class="team-image">
-                                <img class="img-responsive img-thumbnail bounce-in" src="images/team/Blank photo.png" alt="">
+                                <img class="img-responsive img-thumbnail bounce-in" src="images/team/Nitish.jpg" alt="">
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/team/Blank photo.png" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="images/team/Nitish.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                                 </div>
                             </div>
 	                        <div class="team-content fade-up">
-	                            <h5>_________<small class="role muted">______________</small></h5>
-	                            <p>______________________________________</p>
+	                            <h5>Nitish<small class="role muted">Technical Head</small></h5>
+	                            <p>The Platform is your's to showcase yourself.</p>
 	                            <a class="btn btn-social btn-facebook" href="#"><i class="fa fa-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="fa fa-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="fa fa-linkedin"></i></a>
 	                        </div>
 	                    </div>
