--- a/about-us.html
+++ b/about-us.html
@@ -198,10 +198,10 @@
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="center team-member">
-                            <img class="img-responsive img-thumbnail bounce-in" src="images/team/Blank photo.png" alt="">
+                            <img class="img-responsive img-thumbnail bounce-in" src="images/team/Nitish.jpg" alt="">
                             <div class="team-content fade-up">
-                                <h5>_________<small class="role muted">______________</small></h5>
-                                <p>______________________________________</p>
+                                <h5>Nitish<small class="role muted">Technical Head</small></h5>
+                                <p>The Platform is your's to showcase yourself.</p>
                                 <a class="btn btn-social btn-facebook" href="#"><i class="fa fa-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="fa fa-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="fa fa-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="fa fa-linkedin"></i></a>
                             </div>
                         </div>
