--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                                 <img src="images/portfolio/stevejobs.jpg" alt="" style="height: 300px;">
                                 <h5>Steve Jobs- Fired by the company</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/stevejobs.jpg" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a href="https://divyansh-sharma994.github.io/PLATEX/landing.html" rel="prettyPhoto"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
