--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                                 <img src="images/portfolio/stevejobs.jpg" alt="" style="height: 300px;">
                                 <h5>Steve Jobs- Fired by the company</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html" target="_blank"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Steve"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -514,7 +514,7 @@
                                 <img src="images/portfolio/Acidwala.jpeg" alt="" style="height: 300px;">
                                 <h5>Farrhad Acidwalla</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/Acidwala.jpeg" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Farrhad"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -523,7 +523,7 @@
                                 <img src="images/portfolio/billgates1.webp" alt="" style="height: 300px;">
                                 <h5>Bill Gates- Traf-O-Data</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/billgates1.webp" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Bill"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -532,7 +532,7 @@
                                 <img src="images/portfolio/Prafull-Billore.png" alt="" style="height: 300px;">
                                 <h5>Prafful Billore</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/Prafull-Billore.png" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Prafful"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -541,7 +541,7 @@
                                 <img src="images/portfolio/mahindra1.jpeg" alt="" style="height: 300px;">
                                 <h5>Anand Mahindra-Business on Mind</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/mahindra1.jpeg" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Anand"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -550,7 +550,7 @@
                                 <img src="images/portfolio/addidas.jpg" alt="" style="height: 300px;">
                                 <h5> Addi Dassler of Adidas</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/addidas.jpg" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Addi"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -559,7 +559,7 @@
                                 <img src="images/portfolio/Whitney-Wolfe-Herd.jpg" alt="" style="height: 300px;">
                                 <h5>Whitney Wolfe herd of Bumble</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/Whitney-Wolfe-Herd.jpg" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Whitney"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -568,7 +568,7 @@
                                 <img src="images/portfolio/byju_raveendran.jpg" alt="" style="height: 300px;">
                                 <h5>Byju Raveendran</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/byju_raveendran.jpg" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Byju"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->
@@ -577,7 +577,7 @@
                                 <img src="images/portfolio/melanin perkins.jpg" alt="" style="height: 300px;">
                                 <h5>Melanic Perkins of Canva</h5>
                                 <div class="overlay">
-                                    <a class="preview btn btn-outlined btn-primary" href="images/portfolio/melanin perkins.jpg" rel="prettyPhoto"><i class="fa fa-link"></i></a>
+                                    <a class="preview btn btn-outlined btn-primary" href="https://divyansh-sharma994.github.io/PLATEX/landing.html#Melanin"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                         </li><!--/.portfolio-item-->    
@@ -684,7 +684,7 @@
 	                                    Eco-entrepreneurship aims to minimize ecological footprints, promote responsible resource consumption, and contribute to a healthier planet. It represents a forward-thinking approach to business that prioritizes sustainability and environmental consciousness
 	                                </div>
 	                                <div class="read-more-wrapper">
-	                                    <a href="#" class="btn btn-outlined btn-primary">Read more</a>
+	                                    <a href="https://divyansh-sharma994.github.io/PLATEX/landing.html" class="btn btn-outlined btn-primary">Read more</a>
 	                                </div>
 	                            </div>
 	                        </div>
@@ -706,7 +706,7 @@
 	                                    Preserving our planet is not just a responsibility for governments and organizations; it is a collective duty that falls upon each individual. The environment is at the forefront of global concerns in today's rapidly changing world.
 	                                </div>
 	                                <div class="read-more-wrapper">
-	                                    <a href="#" class="btn btn-outlined btn-primary">Read more</a>
+	                                    <a href="https://divyansh-sharma994.github.io/PLATEX/landing_environment.html" class="btn btn-outlined btn-primary">Read more</a>
 	                                </div>
 	                            </div>
 	                        </div>
@@ -728,7 +728,7 @@
 	                                    Approaching taboo topics with sensitivity, empathy, and a willingness to listen can foster meaningful discussions and promote a more inclusive and compassionate society.
 	                                </div>
 	                                <div class="read-more-wrapper">
-	                                    <a href="#" class="btn btn-outlined btn-primary">Read more</a>
+	                                    <a href="https://divyansh-sharma994.github.io/PLATEX/landing_taboo.html" class="btn btn-outlined btn-primary">Read more</a>
 	                                </div>
 	                            </div>
 	                        </div>
@@ -753,7 +753,7 @@
 	                                    Technology is the driving force behind the modern world, reshaping the way we live, work, and interact. Technology has not only revolutionized industries and economies but has also connected people across the globe, transcending borders and cultures.
 	                                </div>
 	                                <div class="read-more-wrapper">
-	                                    <a href="#" class="btn btn-outlined btn-primary">Read more</a>
+	                                    <a href="https://divyansh-sharma994.github.io/PLATEX/landing_technology.html" class="btn btn-outlined btn-primary">Read more</a>
 	                                </div>
 	                            </div>
 	                        </div>
@@ -775,7 +775,7 @@
 	                                    Women's empowerment is a crucial movement that seeks to create equal opportunities and rights for women in all spheres of life. Gender equality benefits not only women but also society as a whole, as it fosters diversity and innovation.
 	                                </div>
 	                                <div class="read-more-wrapper">
-	                                    <a href="#" class="btn btn-outlined btn-primary">Read more</a>
+	                                    <a href="https://divyansh-sharma994.github.io/PLATEX/landing_women.html" class="btn btn-outlined btn-primary">Read more</a>
 	                                </div>
 	                            </div>
 	                        </div>
@@ -797,7 +797,7 @@
 	                                    You can't bring change until and unless you know what needs to be changed. To know about it eplore more topics and broaden your views.
 	                                </div>
 	                                <div class="read-more-wrapper">
-	                                    <a href="#" class="btn btn-outlined btn-primary">Read more</a>
+	                                    <a href="https://divyansh-sharma994.github.io/PLATEX/index.html" class="btn btn-outlined btn-primary">Read more</a>
 	                                </div>
 	                            </div>
 	                        </div>
